refactoring, javadoc, findbugs and other cosmetic changes